--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script type="text/babel">
           const myelement = (
           <div>
-          <ul>
+          <ol>
           <li>
              <a href= "lessons/intro.html">Hello</a>
           </li>
@@ -23,9 +23,7 @@
           <li>
              <a href= "lessons/nestElement.html">React createElement(S)</a>
           </li>
-          <li>
-             <a href= "lessons/ReactDom.html">React createElement</a>
-          </li>
+
           <li>
              <a href= "lessons/JSX.html">Simple JSX</a>
           </li>
@@ -134,10 +132,16 @@
               <a href= "lessons/UpdatRenderedElement.html">Update Element every second  </a>
             </li>
             <li>
-              <a href= "lessons/react_1.html">Using React with no build tooling </a>
+              <a href= "lessons/react_1.html">Using React with no build tooling: include .js  </a>
+            </li>
+            <li>
+              <a href= "lessons/library-React.html">Library example </a>
+            </li>
+            <li>
+              <a href= "lessons/mystore.html">My Store example with arrylist</a>
             </li>
 
-          </ul>
+          </ol>
           </div>
           )
 
