Fatching data from RESTAPI 1. display data in Table formate 2. modify UI componet - remove category component from table component 3. create StorewithRESTapi.html 4. modify Index file sorting store link

--- a/index.html
+++ b/index.html
@@ -137,10 +137,23 @@
             <li>
               <a href= "lessons/library-React.html">Library example </a>
             </li>
+
+            <li>
+                     My Store<ol><li>
+                                   <a href= "lessons/mystore.html">My Store example with arrylist</a>
+                                </li>
+                                <li>
+                                    <a href= "lessons/StorewithRESTapi.html">My Store - Fatching Data from API </a>
+                                </li>
+
+                                </ol>
+            </li>
             <li>
               <a href= "lessons/mystore.html">My Store example with arrylist</a>
             </li>
-
+            <li>
+              <a href= "lessons/mystoreI.html">My Store  with style</a>
+            </li>
           </ol>
           </div>
           )
