grouping topic in list order

--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
           <div>
           <ol>
           <li>
-             <a href= "lessons/intro.html">Hello</a>
+               React Create Element 
+                                     <ol>
+                                      <li><a href= "lessons/intro.html"> Hello </a></li> 
+                                       <li><a href= "lessons/ReactDom.html">React createElement</a></li>
+                                       <li><a href= "lessons/nestElement.html">React createElement(S)</a></li>
+                                     </ol>
           </li>
-          <li>
-             <a href= "lessons/ReactDom.html">React createElement</a>
-          </li>
-          <li>
-             <a href= "lessons/nestElement.html">React createElement(S)</a>
-          </li>
-
           <li>
              <a href= "lessons/JSX.html">Simple JSX</a>
           </li>
