--- a/lessons/ReactDom.html
+++ b/lessons/ReactDom.html
@@ -12,6 +12,9 @@
     <div id="root"></div>
 
 <script type="text/javascript">
+
+const Navbar = () => <a href="../index.html">Home</a>
+
 ReactDOM.render(
 
 React.createElement ("h1",
