--- a/lessons/functionCompWithFunctionComp.html
+++ b/lessons/functionCompWithFunctionComp.html
@@ -18,11 +18,13 @@
  const Navbar = () => <a href="../index.html">Home</a>
 
 const Lake = ({name}) => <h1>{name}</h1>;
+const Mountain = ({name}) => <h1>{name}</h1>;
 const App = () => (
                   <div>
                     <Navbar ></Navbar>
                   <Lake name = "Lake Tahoe" />
                   <Lake name = "Angore Lake" />
+                  <Mountain name ="Mission Mt" />
 
 
                   </div>
