--- a/lessons/props.html
+++ b/lessons/props.html
@@ -17,10 +17,15 @@
 <script type="text/babel">
 
 const Navbar = () => <a href="../index.html">Home</a>
-const Hello = ({language, message}) => {return(
+
+
+const Hello = ({language, message}) => {
+
+
+                      return(
                             <div className="heading">
                             <Navbar />
-                            <h1>Create a  { language} component</h1>
+                            <h1>Create a  {language} component</h1>
                             <p>{message}</p>
                             </div>
                           )}
